--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 		source.addEventListener('cohortMessage', function(e) {
 			console.log("received sse");
-			console.log(data);
+			console.log(e);
   			// var data = JSON.parse(e.data);
   			// console.log(data.id, data.msg);
 		}, false);
