added new scores, added corners in js

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,16 @@
 	<script type="text/javascript">
 
 	var audio = document.createElement('audio');
-	audio.src = 'media/flux-web-v2.mp3';
+	audio.src = 'media/corners.mp3';
+
+	// var audioOne = document.createElement('audio');
+	// audioOne.src = 'media/simpleflux.mp3';
+	//
+	// var audioOne = document.createElement('audio');
+	// audioOne.src = 'media/simpleflux.mp3';
+	//
+	// var audioOne = document.createElement('audio');
+	// audioOne.src = 'media/simpleflux.mp3';
 
 	var load = function(){
 		audio.load();
