switch case testing 2

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 		}, false);
 
 		source.addEventListener('cohortMessage', function(e) {
-
+audio.play();
 	// var x = MessageEvent.data['"action"'];
 	// 			switch(x){
 	// 	      case "episode-1-go": audio.play();
