--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@ for(var i =0; i < allAudio.length; i ++){
 <body>
 	<main role="main">
 		<h1>Cohort Web Test</h1>
-		<!-- <button id = "b1" onclick="load()"> GO! </button> -->
+		<button id = "b1" onclick="load()"> GO! </button>
     </main>
 </body>
 </html>
