That didn't work, testing to see if file size is an issue

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	audioScoreTwo.src = 'media/test.mp3';
 
 	var audioScoreThree = document.createElement('audio');
-	audioScoreThree.src = 'media/chip melt.mp3';
+	audioScoreThree.src = 'media/test.mp3';
 
 	var audioScoreFour = document.createElement('audio');
 	audioScoreFour.src = 'media/ship.mp3';
@@ -27,7 +27,7 @@
 	audioScoreFive.src = 'media/simpleflux.mp3';
 
 	var audioScoreSix = document.createElement('audio');
-	audioScoreSix.src = 'media/simpleflux.mp3';
+	audioScoreSix.src = 'media/test.mp3';
 
 	var allAudio = [audio, audioScoreTwo, audioScoreThree, audioScoreFour, audioScoreFive, audioScoreSix];
 
