changed to a URL for music files

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript">
 	var audio = document.createElement('audio');
-	audio.src = 'media/corners.mp3';
+	audio.src = 'http://webspace.ocad.ca/~lg14ig/media/corners.mp3';
 
 	var audioScoreTwo = document.createElement('audio');
-	audioScoreTwo.src = 'media/test.mp3';
+	audioScoreTwo.src = 'http://webspace.ocad.ca/~lg14ig/media/test.mp3';
 
 	var audioScoreThree = document.createElement('audio');
 	audioScoreThree.src = 'media/chip melt.mp3';
