all music files now URLS

--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,16 @@
 	audioScoreTwo.src = 'http://webspace.ocad.ca/~lg14ig/media/test.mp3';
 
 	var audioScoreThree = document.createElement('audio');
-	audioScoreThree.src = 'media/chip melt.mp3';
+	audioScoreThree.src = 'http://webspace.ocad.ca/~lg14ig/media/melt.mp3';
 
 	var audioScoreFour = document.createElement('audio');
-	audioScoreFour.src = 'media/ship.mp3';
+	audioScoreFour.src = 'http://webspace.ocad.ca/~lg14ig/media/ship.mp3';
 
 	var audioScoreFive = document.createElement('audio');
-	audioScoreFive.src = 'media/simpleflux.mp3';
+	audioScoreFive.src = 'http://webspace.ocad.ca/~lg14ig/media/simpleflux.mp3';
 
 	var audioScoreSix = document.createElement('audio');
-	// audioScoreSix.src = 'media/simpleflux.mp3';
+	 audioScoreSix.src = 'http://webspace.ocad.ca/~lg14ig/media/simpleflux.mp3';
 
 	var allAudio = [audio, audioScoreTwo, audioScoreThree, audioScoreFour, audioScoreFive, audioScoreSix];
 
