--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	audioScoreTwo.src = 'http://webspace.ocad.ca/~lg14ig/media/test.mp3';
 
 	var audioScoreThree = document.createElement('audio');
-	audioScoreThree.src = 'http://webspace.ocad.ca/~lg14ig/media/melt.mp3';
+	audioScoreThree.src = 'http://webspace.ocad.ca/~lg14ig/media/chip melt.mp3';
 
 	var audioScoreFour = document.createElement('audio');
 	audioScoreFour.src = 'http://webspace.ocad.ca/~lg14ig/media/ship.mp3';
