added a ico image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
   <!-- Mobile-friendly viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel = "icon" type="image/ico" href = "img/fav.ico"/>
 
 
 </head>
