added feature to disable video playing once user agrees to standby

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
     <body>
         <div id = "playerLayer">
-            <div class="alert alert-success" role="alert">FluxDelux is running!</div>
+            <!-- <div class="alert alert-success" role="alert">FluxDelux is running!</div> -->
 
         </div>
 
@@ -44,9 +44,10 @@
     <div class = "container-fluid">
           <div class = "row">
             <div class = "embed-responsive embed-responsive-16by9">
-              <iframe  class="embed-responsive-item"
-                src="https://www.youtube.com/embed/SJwnv3CgTGw?rel=0&amp;showinfo=0">
-              </iframe>
+							<iframe  class="embed-responsive-item"
+                	src="https://www.youtube.com/embed/SJwnv3CgTGw?rel=0&amp;showinfo=0">
+								</iframe>
+
              </div>
           </div>
 
