minor text adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           <div class = "row">
               <div class = "col-xs-12">
                 <h4 id = 'info'>
-                   Welcome to FluxDelux.<br> Once you're at the Flux location with comfy shoes on, headphones in hand, hit the "Standby" button to await your FluxDelux instructions.
+                    Welcome! Once you're at the Flux location with comfy shoes on, headphones in hand, hit the "Standby" button below to await your FluxDelux instructions.
                 </h4>
               </div>
           </div>
