--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,15 @@
 <div id = "content">
           <div class = "row">
               <div class = "col-xs-12">
+                <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
                 <h4 id = 'info'>
-                    Welcome! Once you're at the Flux location, and you've entered onto the gym floor, hit the "Check-In" button below to await your FluxDelux instructions.
+                    Welcome! Once you're at the Flux location, ready to move, and you've entered onto the gym floor, hit the "Check-In" button below to await your FluxDelux instructions.
                 </h4>
+                <!-- BEFORE NUIT BLANCHE -->
+                <!-- <h4 id = 'info'>
+                    On the night of Nuit Blanche you'll be able to use this site to participate in FluxDelux if you do not have an iOS device. If you have an iOS device, visit the app store to
+                    download the FluxDelux app. For more info visit <a href = "peggybakerdance.com"> peggybakerdance.com<a/> or <a href = "http://www.scotiabanknuitblanche.ca/project.html?project_id=1649"> http://www.scotiabanknuitblanche.ca/project.html?project_id=1649</a>.
+                </h4> -->
               </div>
           </div>
 
