put in a timeout function to delay by 5s

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,7 @@
         <span id="loading">
           <img src="img/loading.png" width ="45%" height = "45%">
         </span>
-<!--
-        <div id = "prepScreen">
-          <p> Welcome to FluxDelux.<br> Once you're at the Flux location with comfy shoes on, headphones in hand, hit the "Standby" button to await your FluxDelux instructions.</p>
-          <button type="button" class="btn btn-primary">Standby</button>
-          <div> -->
+
 
 
 
@@ -43,6 +39,7 @@
         </div>
     </div>
 </div>
+<!-- THIS IS THE VIDEO BELOW. KEPT IT HERE JUST IN CASE -->
     <!-- <div class = "container-fluid">
           <div class = "row">
             <div class = "embed-responsive embed-responsive-16by9">
@@ -83,7 +80,7 @@
                 <footer>
                   <small>  &#169; 2015 <a href = "http://peggybakerdance.com/">Peggy Baker Dance Projects</a>,<a href = "https://www.youtube.com/watch?v=GqcaSqmvz_U"> Luke Garwood</a>, <a href= "http://jacob-n.com/"> Jacob Niedzwiecki</a></small>
 
-              <!-- </div> -->
+
 
               <div id = "longLogo" class="col-xs-12">
                 <embed src = "img/bottom.svg" type ="image/svg+xml"></embed>
