--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
               <div class = "col-xs-12">
                 <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
                 <h4 id = 'info'>
-                    Welcome! Once you're at the Flux location, and you've entered onto the gym floor, hit the "Check-In" button below to await your FluxDelux instructions.
+                    Welcome! Once you're at the Flux location, and you're on the gym floor ready to move, hit the "Check-In" button below to await your FluxDelux instructions.
                 </h4>
                 <!-- BEFORE NUIT BLANCHE -->
                 <!-- <h4 id = 'info'>
