replaced ocad links with amazon links

--- a/public/index.html
+++ b/public/index.html
@@ -59,16 +59,23 @@
                 </h4>
                 <!-- BEFORE NUIT BLANCHE -->
                 <!-- <h4 id = 'info'>
-                    On the night of Nuit Blanche you'll be able to use this site to participate in FluxDelux if you do not have an iOS device. If you have an iOS device, visit the app store to
-                    download the FluxDelux app. For more info visit <a href = "peggybakerdance.com"> peggybakerdance.com<a/> or <a href = "http://www.scotiabanknuitblanche.ca/project.html?project_id=1649"> http://www.scotiabanknuitblanche.ca/project.html?project_id=1649</a>.
+                  Thanks for visiting <i>FluxDelux</i>.<br>
+
+On the night of Nuit Blanche you’ll be able to use this site to participate in <i>FluxDelux </i>if you do not have an iOS device.
+If you do have an iOS device, visit the app store to download the <i>FluxDelux</i> app <a href ="https://geo.itunes.apple.com/us/app/fluxdelux/id997524033?mt=8"> here </a>. <br>
+
+For more information, please visit us at  <a href = "peggybakerdance.com"> peggybakerdance.com</a> or <a href = "http://www.scotiabanknuitblanche.ca/project.html?project_id=1649">scotiabanknuitblanche.ca</a>.
+
+
+
                 </h4> -->
               </div>
           </div>
 
           <div class = "row">
-              <!-- <div class = "col-md-4 col-xs-12"> -->
+
                   <button id = "b1" class="btn btn-default btn-block" onclick="load()"> Check-In </button>
-              <!-- </div> -->
+
           </div>
 
 </div>
