Commented code-this is the one to look at

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
   </head>
     <body>
       <div id = "wrapper">
-        <div id="head">
+        <!-- <div id="head">
         <div id = "playerLayer">
-            <!-- <div class="alert alert-success" role="alert">FluxDelux is running!</div> -->
+            <!<div class="alert alert-success" role="alert">FluxDelux is running!</div> -->
 
-        </div>
+        </div> -->
 
         <span id="loading">
           <img src="img/loading.png" width ="45%" height = "45%">
@@ -55,7 +55,7 @@
               <div class = "col-xs-12">
                 <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
                 <h4 id = 'info'>
-                    Welcome! Once you're at the Flux location, and you're on the gym floor ready to move, hit the "Check-In" button below to await your FluxDelux instructions.
+                    Welcome to <i> FluxDelux</i>! If you're not quite at the Trinity Community Recreation Centre yet, close this browser and come back to visit us when you are.<br>If you are here, and you're on the gym floor ready to move, hit the "Check-In" button when it appears below to await your FluxDelux instructions.
                 </h4>
                 <!-- BEFORE NUIT BLANCHE -->
                 <!-- <h4 id = 'info'>
